src/objects/Visit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visitss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkin__c</fullName>
        <label>Check in</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Checkout__c</fullName>
        <label>Check out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visitss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduleDate__c</fullName>
        <label>Schedule Date</label>
        <type>DateTime</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Lead__c</columns>
        <columns>ScheduleDate__c</columns>
        <columns>Checkin__c</columns>
        <columns>Checkout__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>